--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
       "mongoose": "2.4.1",
       "node-markdown": "0.1.0",
       "validator": "0.3.7",
-      "nodemailer": "0.3.1"
+      "nodemailer": "0.3.1",
+      "underscore": "x",
+      "jscex": "0.6.x",
+      "jscex-jit": "0.6.x",
+      "jscex-async": "0.6.x",
+      "jscex-async-powerpack": "0.6.x"
   }
 }
