--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "validator": "0.3.7",
       "nodemailer": "0.3.1",
       "underscore": "x",
+      "moment": "x",
       "jscex": "0.6.x",
       "jscex-jit": "0.6.x",
       "jscex-async": "0.6.x",
