--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "validator": "0.3.7",
     "ndir": "0.1.2",
     "nodemailer": "0.3.5",
+    "underscore": "x",
     "jscex": "0.6.x",
     "jscex-jit": "0.6.x",
     "jscex-async": "0.6.x",
